0.2507   2004-02-14  the "nothing says love like timezones" release

- Fix a test failure in t/04-local.t on systems where /etc/localtime
is a copy of a zoneinfo file, not a symlink.  This was a bug in the
testing code.  Reported by Warren Dodge and a few others.

- If /etc/localtime was a copy of a zoneinfo file, then the current
working directory could be changed while trying to determine the local
time zone, because we use File::Find to find a matching zoneinfo file.
Reported by someone ... (I can't find the message reporting this).

- Update the Makefile.PL to work with Module::Build 0.23.


0.2506   2003-12-15

- On systems where /etc/localtime is a copy of a zone info file (like
FreeBSD), we now look for a matching file in /usr/share/zoneinfo in
order to determine the local time zone.  Based on a patch from Slaven
Rezic.

- This release is based on the 2003e Olson database.


0.2505   2003-10-27

- The change in 0.2504 to accomodate SuSE's /etc/sysconfig/clock file
broke this feature on RedHat.  Sigh.  Reported by John Siracusa.


0.2504   2003-10-25

- If a timezone module cannot be loaded, give a more useful error
message if the failure is due to a syntax error in the module, as
opposed to the specified time zone not existing.  Based on a patch
from Alexey Mahotkin.

- Require Pod::Man 1.14+, so that head3/head4 markup doesn't cause
installation to die.

- SuSE puts TIMEZONE="Foo/Bar" in the /etc/sysconfig/clock file, but
DT::TZ::Local just looked for ZONE="...".  Reported by Pete.


0.2503   2003-10-06

- Made the offset string -> number conversion slightly less strict, so
that 1:00:00 is accepted, as opposed to required 01:00:00.  Without
colons, it still must be four or six digits, however.

- This release is based on the 2003d Olson database, which contains
updates for various zones.

- Fixed a bug in DateTime::TimeZone::OlsonDB for zones where an
observance change occurred at UTC year X, and a new rule started at